fixed the spacing between me.image and the headline.

--- a/app/assets/styles/modules/components/_avatar.css
+++ b/app/assets/styles/modules/components/_avatar.css
@@ -12,7 +12,7 @@
 
     @mixin atLarge {
       width: 140px;
-      margin-bottom: 2em;
+      margin-bottom: 1.1em;
     }
   }
 }
